code review: use 'getLast()' like a pro